app/config-server-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: config-server
spec:
  selector:
    app: petclinic
    component: configserver
  type:  ClusterIP
  ports:
  - name:  http
    port:  8888
    targetPort:  8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
      component: configserver
  template:
    metadata:
      labels:
        app: petclinic
        component: configserver
    spec:
      containers:
      - name: config-server
        image: config
        ports:
            - containerPort: 8888
