app/gw-service-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: api-gateway
spec:
  selector:
    app: petclinic
    component: api-gateway
  type:  ClusterIP
  ports:
  - name:  http
    port:  8080
    targetPort:  8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
      component: api-gateway
  template:
    metadata:
      labels:
        app: petclinic
        component: api-gateway
    spec:
      containers:
      - name:  api-gateway
        image: spring-petclinic-api-gateway
        imagePullPolicy: Always
        ports:
            - containerPort: 8080
