app/vets-service-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: vets-service
spec:
  selector:
    app: petclinic
    component: vets-service
  type:  ClusterIP
  ports:
  - name:  http
    port:  8080
    targetPort:  8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
      component: vets-service
  template:
    metadata:
      labels:
        app: petclinic
        component: vets-service
    spec:
      containers:
      - name:  vets-service
        image:  ellinj/pet-clinic-vets-service:latest
        imagePullPolicy: Always
        ports:
            - containerPort: 8080
