app/visit-service-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: visits-service
spec:
  selector:
    app: petclinic
    component: visits-service
  type:  ClusterIP
  ports:
  - name:  http
    port:  8080
    targetPort:  8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
      component: visits-service
  template:
    metadata:
      labels:
        app: petclinic
        component: visits-service
    spec:
      containers:
      - name:  visits-service
        image: ellinj/pet-clinic-visits-service:latest
        imagePullPolicy: Always
        ports:
            - containerPort: 8080
